--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,27 @@
+:root {
+  --white: #ffffff;
+  --blue: #117a7a;
+  --pink: #b2324a;
+  --white-aqua: #f6f7f9;
+  --white-green: #d9d9d9;
+  --black-blue: #1b1c1f;
+  --blue-aqua: #1c9675;
+  --black-white: #5a5a5a;
+  --black-green: #767e8c;
+  --sd: 16px;
+  --sm: 20px;
+  --lg: 40px;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html, body {
+  background-color: var(--black-blue);
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
